--- a/rust/pact_mock_server_cli/Cargo.toml
+++ b/rust/pact_mock_server_cli/Cargo.toml
@@ -18,8 +18,8 @@ clap = "2.4.0"
 serde_json = "1.0"
 pact_matching = "0.2.2"
 # pact_matching = { path = "../pact_matching" }
-pact_mock_server = "0.2.2"
-# pact_mock_server = { path = "../pact_mock_server" }
+#pact_mock_server = "0.2.2"
+pact_mock_server = { path = "../pact_mock_server" }
 p-macro = "0.2.0"
 simplelog = "^0.4.0"
 log = "0.3.5"
