--- a/rust/pact_mock_server_cli/Dockerfile
+++ b/rust/pact_mock_server_cli/Dockerfile
@@ -1,4 +1,7 @@
+#Copyright: Amdocs Development Limited, 2017
 FROM scratch
+
+LABEL maintainer="assaf.katz@amdocs.com"
 
 ADD target/x86_64-unknown-linux-musl/release/pact_mock_server_cli /  
 EXPOSE 8080
