feat: got basic generator implementation with XML #34

--- a/rust/pact_matching/Cargo.toml
+++ b/rust/pact_matching/Cargo.toml
@@ -25,7 +25,8 @@ lazy_static = "1.4.0"
 semver = "0.7.0"
 itertools = "0.8.2"
 rand = "0.6"
-sxd-document = "0.2.4"
+sxd-document = "0.3.2"
+xmltree = "0.10.0"
 ansi_term = "0.9.0"
 difference = "1.0.0"
 base64 = "0.7.0"
@@ -43,3 +44,4 @@ quickcheck = "0.4.1"
 expectest = "0.11.0"
 env_logger = "0.4.3"
 hamcrest2 = "0.2.6"
+tempfile = "3.1.0"
