--- a/rust/pact_mock_server_ffi/Cargo.toml
+++ b/rust/pact_mock_server_ffi/Cargo.toml
@@ -18,6 +18,7 @@ pact_matching = { version = "0.8.6", path = "../pact_matching" }
 pact_mock_server = { version = "0.7.12", path = "../pact_mock_server" }
 libc = "0.2.69"
 serde_json = "1.0"
+serde = "1.0"
 env_logger = "0.7.1"
 log = "0.4.8"
 lazy_static = "1.4.0"
@@ -33,10 +34,15 @@ rand = "0.6"
 itertools = "0.9.0"
 formdata = "0.12.3"
 hyper = "0.10"
+tokio = { version = "0.2.9", features = ["rt-threaded", "macros"] }
+reqwest = { version = "0.10", features = ["blocking", "json"] }
+
+[dependencies.serde_with]
+version = "1.5.1"
+features = ["json"]
 
 [dev-dependencies]
 expectest = "0.12.0"
-reqwest = { version = "0.10", features = ["blocking"] }
 
 [lib]
 crate-type = ["cdylib", "staticlib", "rlib"]
