chore: get rid of nom dupes by using tree_magic_mini

--- a/rust/pact_matching/Cargo.toml
+++ b/rust/pact_matching/Cargo.toml
@@ -38,7 +38,7 @@ chrono = "0.4.19"
 chrono-tz = "0.5.1"
 rand_regex = "0.14.2"
 regex-syntax = "0.6.21"
-tree_magic = "0.2.3"
+tree_magic_mini = "1"
 multipart = { version = "0.17", default-features = false, features = ["server"] }
 http = "0.2"
 mime = "0.3.16"
