--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -16,4 +16,4 @@ exclude = [
 resolver = "2"
 
 [patch.crates-io]
-onig = { git = "https://github.com/rust-onig/rust-onig", default-features = false }
+onig = { git = "https://github.com/rust-onig/rust-onig", default-features = false, branch = "main" }
