fix: change filegroup

--- a/rust/BUILD.bazel
+++ b/rust/BUILD.bazel
@@ -1,8 +1,8 @@
 filegroup(
     name = "libpact_ffi.a",
-    srcs = glob([
-        ":pact_ffi/libpact_ffi.a",
-    ]),
+    srcs = [
+        "//pact_ffi",
+    ],
     visibility = ["//visibility:public"],
 
 )
