--- a/rust/WORKSPACE
+++ b/rust/WORKSPACE
@@ -8,6 +8,7 @@ http_archive(
 )
 
 load("@rules_rust//rust:repositories.bzl", "rules_rust_dependencies", "rust_register_toolchains")
+
 rules_rust_dependencies()
 
 rust_register_toolchains(
@@ -16,10 +17,13 @@ rust_register_toolchains(
 )
 
 load("@rules_rust//crate_universe:repositories.bzl", "crate_universe_dependencies")
+load("@rules_rust//cargo:defs.bzl", "cargo_bootstrap_repository")
+
 crate_universe_dependencies(bootstrap = True)
 
 load("@rules_rust//crate_universe:defs.bzl", "crate", "crates_repository", "splicing_config")
 load("@rules_rust//crate_universe:defs.bzl", "crates_repository", "crate")
+
 crates_repository(
     name = "crate_index",
     cargo_lockfile = "//:Cargo.lock",
