--- a/rust/WORKSPACE
+++ b/rust/WORKSPACE
@@ -8,17 +8,22 @@ http_archive(
 )
 
 load("@rules_rust//rust:repositories.bzl", "rules_rust_dependencies", "rust_register_toolchains")
-
 rules_rust_dependencies()
 
 rust_register_toolchains(
     edition = "2021",
+)
 
+load("@rules_rust//rust:defs.bzl", "rust_common")
+load("@rules_rust//cargo:defs.bzl", "cargo_bootstrap_repository")
+
+cargo_bootstrap_repository(
+    name = "pact_verifier_cli",
+    cargo_lockfile = "//:Cargo.lock",
+    cargo_toml = "//:Cargo.toml",
 )
 
 load("@rules_rust//crate_universe:repositories.bzl", "crate_universe_dependencies")
-load("@rules_rust//cargo:defs.bzl", "cargo_bootstrap_repository")
-
 crate_universe_dependencies(bootstrap = True)
 
 load("@rules_rust//crate_universe:defs.bzl", "crate", "crates_repository", "splicing_config")
@@ -47,7 +52,16 @@ crates_repository(
     )},
 )
 
+
+
+
 load("@crate_index//:defs.bzl", "crate_repositories")
 crate_repositories()
 
 
+
+cargo_bootstrap_repository(
+    name = "pact_verifier_cli",
+    cargo_lockfile = "@pact-reference//:Cargo.lock",
+    cargo_toml = "@pact-reference//Cargo.toml",
+)
