--- a/rust/pact_ffi/BUILD.bazel
+++ b/rust/pact_ffi/BUILD.bazel
@@ -11,7 +11,7 @@ cargo_build_script(
     deps = all_crate_deps(package_name = "pact_ffi") + ["@crate_index//:os_info"],
 )
 rust_shared_library(
-    name = "pact_ffi",
+    name = "pact_ffi_lib",
     srcs = glob(
         ["src/**/*.rs"]
     ),
@@ -22,4 +22,12 @@ rust_shared_library(
             "//pact_verifier",
             "//pact_mock_server"]
             + all_crate_deps(package_name = "pact_ffi") + [":build"],
+    visibility = ["//visibility:public"],
+)
+
+cc_library(
+    name = "pact_ffi",
+    deps = [":pact_ffi_lib"],
+    linkstatic=1,
+    visibility = ["//visibility:public"],
 )
