--- a/rust/WORKSPACE
+++ b/rust/WORKSPACE
@@ -39,7 +39,16 @@ crates_repository(
     packages = {
        "os_info": crate.spec(
         version = "3.5.1",
-    )},
+        ),
+    },
+    annotations = {
+        "onig_sys": [crate.annotation(
+        shallow_since="1686508130 +0100"
+        )],
+        "onig": [crate.annotation(
+        shallow_since="1686508130 +0100"
+        )],
+    }
 )
 
 load("@crate_index//:defs.bzl", "crate_repositories")
