--- a/rust/pact_verifier/BUILD.bazel
+++ b/rust/pact_verifier/BUILD.bazel
@@ -7,6 +7,6 @@ rust_library(
     srcs = glob(
         ["src/*.rs"]
     ),
-    proc_macro_deps = all_crate_deps(proc_macro = True),
+    proc_macro_deps = all_crate_deps(package_name = "pact_verifier", proc_macro = True),
     deps = ["//pact_matching"] + all_crate_deps(package_name = "pact_verifier"),
 )
