--- a/rust/pact_verifier_cli/BUILD.bazel
+++ b/rust/pact_verifier_cli/BUILD.bazel
@@ -5,7 +5,7 @@ load("@rules_rust//rust:defs.bzl", "rust_binary")
 rust_binary(
     name = "pact_verifier_cli",
     srcs = glob(["src/*.rs"]),
-    deps = all_crate_deps(normal = "True") + ["//pact_verifier"],
+    deps = all_crate_deps(package_name = "pact_verifier_cli", normal = "True") + ["//pact_verifier"],
     visibility = ["//visibility:public"],
 
 )
