--- a/rust/.bazelrc
+++ b/rust/.bazelrc
@@ -1,1 +1,3 @@
 build --enable_bzlmod
+common --registry=https://bcr.bazel.build
+common --registry=https://raw.githubusercontent.com/matts1/bazel-central-registry/main
