--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -1,14 +1,6 @@
 [workspace]
 members = [
-    "pact_models",
-    "pact_matching",
-    "pact_mock_server",
-    "pact_mock_server_cli",
-    "pact_consumer",
-    "pact_verifier",
-    "pact_verifier_cli",
-    "pact_cli",
-    "pact_ffi"
+    "pact_*"
 ]
 exclude = [
     "pact_wasm"
