chore: use local pact_models
The `pact_models` dependency underpins a number of the other packages
within the workspace, and the `pact-plugin-driver` package external to
this workspace. This committee ensures the local `pact_models` library
is consistently used during development by:

1. Using the `path = "..."` for packages within the workspace; and,
2. Using a `patch` in `Cargo.toml` to override transitive
   dependencies (such as the one that comes from `pact-plugin-driver`).

Signed-off-by: JP-Ellis <josh@jpellis.me>

--- a/compatibility-suite/Cargo.toml
+++ b/compatibility-suite/Cargo.toml
@@ -13,7 +13,7 @@ futures = "0.3.29"
 itertools = "0.11.0"
 lazy_static = "1.4.0"
 maplit = "1.0.2"
-pact_models = "~1.1.17"
+pact_models = { version = "~1.1.17", path = "../rust/pact_models" }
 pact_matching = { version = "1.1.9", path = "../rust/pact_matching" }
 pact_mock_server = { version = "1.2.4", path = "../rust/pact_mock_server" }
 pact_verifier = { version = "1.0.5", path = "../rust/pact_verifier" }
@@ -29,6 +29,9 @@ tokio = { version = "1.33.0", features = ["full"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.17", features = ["env-filter", "tracing-log", "fmt"] }
 uuid = { version = "1.5.0", features = ["v4"] }
+
+[patch.crates-io]
+pact_models = { path = "../rust/pact_models" }
 
 [[test]]
 name = "v1_consumer"
