--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -9,3 +9,4 @@ resolver = "2"
 
 [patch.crates-io]
 onig = { git = "https://github.com/rust-onig/rust-onig", default-features = false }
+pact_models = { path = "pact_models" }
