--- a/rust/pact_ffi/Cargo.toml
+++ b/rust/pact_ffi/Cargo.toml
@@ -32,7 +32,7 @@ multipart = { version = "0.18.0", default-features = false, features = ["client"
 onig = { version = "6.4.0", default-features = false }
 pact_matching = { version = "~1.1.9", path = "../pact_matching" }
 pact_mock_server = { version = "~1.2.4", path = "../pact_mock_server" }
-pact_models = "~1.1.17"
+pact_models = { version = "~1.1.17", path = "../pact_models" }
 pact-plugin-driver = { version = "~0.5.1" }
 pact_verifier = { version = "~1.0.5", path = "../pact_verifier" }
 panic-message = "0.3.0"
