--- a/rust/pact_cli/Cargo.toml
+++ b/rust/pact_cli/Cargo.toml
@@ -17,7 +17,7 @@ exclude = [
 clap = "2.31.2"
 serde_json = "1.0"
 serde = "1.0"
-pact_models = "~1.1.17"
+pact_models = { version = "~1.1.17", path = "../pact_models" }
 pact_matching = { version = "~1.1.9", path = "../pact_matching" }
 anyhow = "1.0.40"
 log = "0.4.14"
