--- a/rust/pact_consumer/Cargo.toml
+++ b/rust/pact_consumer/Cargo.toml
@@ -31,7 +31,7 @@ lazy_static = "1.4.0"
 maplit = "1.0.2"
 pact_matching = { version = "~1.1.9", path = "../pact_matching", default-features = false }
 pact_mock_server = { version = "~1.2.4", path = "../pact_mock_server", default-features = false }
-pact_models = { version = "~1.1.17", default-features = false }
+pact_models = { version = "~1.1.17", path = "../pact_models", default-features = false }
 pact-plugin-driver = { version = "~0.5.1", optional = true, default-features = false }
 regex = "1.10.2"
 serde_json = "1.0.108"
