--- a/rust/pact_matching/Cargo.toml
+++ b/rust/pact_matching/Cargo.toml
@@ -40,7 +40,7 @@ mime = "0.3.17"
 multer = { version = "2.1.0", features = ["all"], optional = true }
 nom = "7.1.3"
 onig = { version = "6.4.0", default-features = false }
-pact_models = { version = "~1.1.17", default-features = false }
+pact_models = { version = "~1.1.17", path = "../pact_models", default-features = false }
 pact-plugin-driver = { version = "~0.5.1", optional = true, default-features = false }
 rand = "0.8.5"
 semver = "1.0.17"
