--- a/rust/pact_mock_server/Cargo.toml
+++ b/rust/pact_mock_server/Cargo.toml
@@ -31,7 +31,7 @@ itertools = "0.12.0"
 lazy_static = "1.4.0"
 maplit = "1.0.2"
 pact_matching = { version =  "~1.1.9", path = "../pact_matching", default-features = false }
-pact_models = { version = "~1.1.17", default-features = false }
+pact_models = { version = "~1.1.17", path = "../pact_models", default-features = false }
 pact-plugin-driver = { version = "~0.5.1", optional = true, default-features = false }
 rustls = { version = "~0.21.10", optional = true }
 rustls-pemfile = { version = "1.0.4", optional = true }
