--- a/rust/pact_verifier/Cargo.toml
+++ b/rust/pact_verifier/Cargo.toml
@@ -36,7 +36,7 @@ lazy_static = "1.4.0"
 maplit = "1.0.2"
 mime = "0.3.17"
 pact_matching = { version = "~1.1.9", path = "../pact_matching", default-features = false }
-pact_models = { version = "~1.1.17", default-features = false }
+pact_models = { version = "~1.1.17", path = "../pact_models", default-features = false }
 pact-plugin-driver = { version = "~0.5.1", optional = true, default-features = false }
 regex = "1.10.2"
 serde = "1.0.193"
