--- a/rust/pact_verifier_cli/Cargo.toml
+++ b/rust/pact_verifier_cli/Cargo.toml
@@ -29,7 +29,7 @@ env_logger = "0.10.1"
 junit-report = { version = "0.8.3", optional = true }
 log = "0.4.20"
 maplit = "1.0.2"
-pact_models = { version = "~1.1.17", default-features = false }
+pact_models = { version = "~1.1.17", path = "../pact_models", default-features = false }
 pact_verifier = { version = "~1.0.5", path = "../pact_verifier", default-features = false }
 regex = "1.10.2"
 reqwest = { version = "0.11.23", default-features = false, features = ["rustls-tls-native-roots", "blocking", "json"] }
