--- a/rust/pact_wasm/Cargo.toml
+++ b/rust/pact_wasm/Cargo.toml
@@ -18,7 +18,7 @@ exclude = [
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-pact_models = "~1.1.17"
+pact_models = { version = "~1.1.17", path = "../pact_models" }
 wasm-bindgen = "0.2.79"
 console_error_panic_hook = "0.1.7"
 console_log = { version = "0.2.0", features = ["color"] }
