--- a/rust/pact_ffi/Cargo.toml
+++ b/rust/pact_ffi/Cargo.toml
@@ -46,10 +46,10 @@ sxd-document = "0.3.2"
 thiserror = "1.0.51"
 tokio = { version = "1.35.1", features = ["full"] }
 tokio-rustls = "0.24.1"
-tracing = "0.1.40" # This needs to be the same version across all the libs (i.e. plugin driver)
-tracing-core = "0.1.32"  # This needs to be the same version across all the pact libs (i.e. plugin driver)
+tracing = "0.1.40"
+tracing-core = "0.1.32"
 tracing-log = "0.2.0"
-tracing-subscriber = { version = "0.3.18", features = ["env-filter", "tracing-log"] }
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 uuid = { version = "1.6.1", features = ["v4"] }
 zeroize = "1.7.0"
 
