fix: pactffi_mock_server_logs empty due to tracing lib mismatch
add smoke test, needs to be executed in isolation, as it uses the global logging provider and thusly is affected by other tests in the same process

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,12 @@ jobs:
         env:
           RUST_LOG: debug
           RUST_BACKTRACE: 1
+      - name: Run mock_server_logs test
+        run: cargo test -p pact_ffi returns_mock_server_logs -- --nocapture --include-ignored
+        working-directory: rust
+        env:
+          RUST_LOG: debug
+          RUST_BACKTRACE: 1
       - name: Build Components
         run: cargo build
         working-directory: rust
