--- a/rust/pact_consumer/Cargo.toml
+++ b/rust/pact_consumer/Cargo.toml
@@ -29,10 +29,10 @@ futures = "0.3.30"
 itertools = "0.12.1"
 lazy_static = "1.4.0"
 maplit = "1.0.2"
-pact_matching = { version = "~1.2.3", path = "../pact_matching", default-features = false }
-pact_mock_server = { version = "~1.2.8", default-features = false }
-pact_models = { version = "~1.2.0", default-features = false }
-pact-plugin-driver = { version = "~0.6.1", optional = true, default-features = false }
+pact_matching = { version = "~1.2.4", path = "../pact_matching", default-features = false }
+pact_mock_server = { version = "~1.2.9", default-features = false }
+pact_models = { version = "~1.2.0", default-features = false, path = "../pact_models"  }
+pact-plugin-driver = { version = "~0.6.2", optional = true, default-features = false }
 regex = "1.10.4"
 serde_json = "1.0.115"
 tokio = { version = "1.37.0", features = ["full"] }
