--- a/rust/pact_ffi/Cargo.toml
+++ b/rust/pact_ffi/Cargo.toml
@@ -31,9 +31,9 @@ maplit = "1.0.2"
 multipart = { version = "0.18.0", default-features = false, features = ["client", "mock"] }
 onig = { version = "6.4.0", default-features = false }
 pact_matching = { version = "~1.2.3", path = "../pact_matching" }
-pact_mock_server = { version = "~1.2.8" }
-pact_models = { version = "~1.2.0" }
-pact-plugin-driver = { version = "~0.6.1" }
+pact_mock_server = { version = "~1.2.9" }
+pact_models = { version = "~1.2.0", path = "../pact_models"  }
+pact-plugin-driver = { version = "~0.6.2" }
 pact_verifier = { version = "~1.2.1", path = "../pact_verifier" }
 panic-message = "0.3.0"
 rand = "0.8.5"
