--- a/compatibility-suite/Cargo.toml
+++ b/compatibility-suite/Cargo.toml
@@ -65,5 +65,5 @@ harness = false
 [patch.crates-io]
 pact_matching = { path = "../rust/pact_matching" }
 pact_models = { path = "../rust/pact_models" }
-pact_mock_server = { git = 'https://github.com/you54f/pact-core-mock-server.git', branch = "issue/134_missing_buffer_logs" }
-pact-plugin-driver = { git = 'https://github.com/you54f/pact-plugins.git', branch = "issue/134_missing_buffer_logs" }
+pact_mock_server = { git = 'https://github.com/pact-foundation/pact-core-mock-server.git', branch = "issue/134_missing_buffer_logs" }
+pact-plugin-driver = { git = 'https://github.com/pact-foundation/pact-plugins.git', branch = "issue/134_missing_buffer_logs" }
