--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,8 @@ jobs:
         rust: [ stable ]
     env:
       pact_do_not_track: true
+      # Without this fails to compile on Windows
+      AWS_LC_SYS_NO_ASM: 1
     steps:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@stable
@@ -46,8 +48,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: |
-         docker run --rm --user "$(id -u)":"$(id -g)" -v $(pwd):/workspace -w /workspace/rust -t -e TZ=UTC pactfoundation/rust-musl-build ./scripts/ci-musl-build.sh
-
+         docker run --rm --user "$(id -u)":"$(id -g)" -v $(pwd):/workspace -w /workspace/rust -t -e TZ=UTC -e AWS_LC_SYS_NO_ASM=1 pactfoundation/rust-musl-build ./scripts/ci-musl-build.sh
 
   check-features:
     runs-on: ubuntu-latest
@@ -55,4 +56,3 @@ jobs:
       - uses: actions/checkout@v3
       - run: cargo check --no-default-features
         working-directory: rust
-         
