chore: Fix for error: failed to run custom build command for `aws-lc-sys v0.18.0`

--- a/.github/workflows/build-ffi.yml
+++ b/.github/workflows/build-ffi.yml
@@ -12,6 +12,8 @@ jobs:
         rust: [ stable ]
     env:
       pact_do_not_track: true
+      # Without this fails to compile on Windows
+      AWS_LC_SYS_NO_ASM: 1
     steps:
       - uses: actions/checkout@v3
       - run: rustc --version || true
