--- a/rust/pact_ffi/Cargo.toml
+++ b/rust/pact_ffi/Cargo.toml
@@ -40,7 +40,7 @@ rand = "0.8.5"
 rand_regex = "0.15.1"
 regex = "1.10.2"
 regex-syntax = "0.6.29"
-rustls = { version = "0.23.10", features = ["ring"] }
+rustls = { version = "0.23.10", default-features = false, features = ["ring"] }
 rustls-pemfile = "2.1.2"
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
