--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -20,6 +20,7 @@ tracing-subscriber = { git = "https://github.com/tokio-rs/tracing.git", tag = "t
 pact_matching = { version = "~1.2.4", path = "./pact_matching" }
 # Issue 389 - Pull change into other crates
 pact_models = { version = "~1.2.1", path = "./pact_models" }
+pact_mock_server = { version = "~2.0.0-beta.2", default-features = false, git = "https://github.com/pact-foundation/pact-core-mock-server.git", branch = "v2.0.x" }
 
 [profile.release]
 strip = true
