--- a/rust/pact_ffi/Cargo.toml
+++ b/rust/pact_ffi/Cargo.toml
@@ -41,13 +41,14 @@ rand_regex = "0.15.1"
 regex = "1.10.2"
 regex-syntax = "0.6.29"
 rustls = { version = "0.23.10", default-features = false, features = ["ring"] }
-rustls-pemfile = "2.1.2"
+rustls-pemfile = { version = "2.1.2", default-features = false, features = ["std"] }
+rustls-webpki = { version = "0.102.4", default-features = false, features = ["std", "ring"]}
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
 sxd-document = "0.3.2"
 thiserror = "1.0.51"
 tokio = { version = "1.35.1", features = ["full"] }
-tokio-rustls = "0.26.0"
+tokio-rustls = { version = "0.26.0", default-features = false, features = ["ring"] }
 tracing = "0.1.40" # This needs to be the same version across all the libs (i.e. plugin driver)
 tracing-core = "0.1.32"  # This needs to be the same version across all the pact libs (i.e. plugin driver)
 tracing-log = "0.2.0"
