--- a/rust/pact_ffi/CMakeLists.txt
+++ b/rust/pact_ffi/CMakeLists.txt
@@ -226,6 +226,7 @@ add_custom_command(
     OUTPUT ${CARGO_LIBRARY_FILE}
     COMMAND
         ${CARGO_EXECUTABLE}
+        --locked
         build
         ${CARGO_BUILD_TYPE}
         --target-dir ${CARGO_TARGET_DIR}
