--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -21,6 +21,7 @@ pact_matching = { version = "~1.2.4", path = "./pact_matching" }
 # Issue 389 - Pull change into other crates
 pact_models = { version = "~1.2.1", path = "./pact_models" }
 pact_mock_server = { git = "https://github.com/pact-foundation/pact-core-mock-server.git", branch = "v2.0.x" }
+pact-plugin-driver = { git = "https://github.com/pact-foundation/pact-plugins.git" }
 
 [profile.release]
 strip = true
