--- a/rust/pact_verifier/Cargo.toml
+++ b/rust/pact_verifier/Cargo.toml
@@ -39,7 +39,7 @@ pact_matching = { version = "~1.2.4", path = "../pact_matching", default-feature
 pact_models = { version = "~1.2.1", default-features = false }
 pact-plugin-driver = { version = "~0.6.1", optional = true, default-features = false }
 regex = "1.10.4"
-reqwest = { version = "0.12.3", default-features = false, features = ["rustls-tls-native-roots", "blocking", "json"] }
+reqwest = { version = "0.12.3", default-features = false, features = ["native-tls-vendored", "blocking", "json"] }
 serde = "1.0.197"
 serde_json = "1.0.115"
 serde_with = { version = "3.7.0", features = ["json"] }
