--- a/rust/pact_consumer/Cargo.toml
+++ b/rust/pact_consumer/Cargo.toml
@@ -45,7 +45,7 @@ uuid = { version = "1.8.0", features = ["v4"] }
 quickcheck = "1.0.3"
 env_logger = "0.11.3"
 expectest = "0.12.0"
-reqwest = { version = "0.12.3", default-features = false, features = ["native-tls-vendored", "blocking", "json"] }
+reqwest = { version = "0.12.3", default-features = false, features = ["rustls-tls-native-roots", "blocking", "json"] }
 serde = { version = "^1.0", features = ["derive"] }
 rand = "0.8.5"
 tokio-test = "0.4.4"
