--- a/rust/pact_matching/Cargo.toml
+++ b/rust/pact_matching/Cargo.toml
@@ -44,7 +44,7 @@ onig = { version = "6.4.0", default-features = false }
 pact_models = { version = "~1.2.1", default-features = false }
 pact-plugin-driver = { version = "~0.6.1", optional = true, default-features = false }
 rand = "0.8.5"
-reqwest = { version = "0.12.3", default-features = false, features = ["native-tls-vendored", "json"] }
+reqwest = { version = "0.12.3", default-features = false, features = ["rustls-tls-native-roots", "json"] }
 semver = "1.0.22"
 serde = { version = "^1.0", features = ["derive"] }
 serde_json = "^1.0"
