--- a/rust/pact_consumer/Cargo.toml
+++ b/rust/pact_consumer/Cargo.toml
@@ -30,7 +30,7 @@ futures = "0.3.30"
 itertools = "0.13.0"
 lazy_static = "1.5.0"
 maplit = "1.0.2"
-pact_matching = { version = "~2.0.0-beta", path = "../pact_matching", default-features = false }
+pact_matching = { version = "~2.0.0-beta.1", path = "../pact_matching", default-features = false }
 pact_mock_server = { version = "~2.0.3", default-features = false }
 pact_models = { version = "~1.3.1", default-features = false }
 pact-plugin-driver = { version = "~0.7.4", optional = true, default-features = false }
