--- a/compatibility-suite/Cargo.toml
+++ b/compatibility-suite/Cargo.toml
@@ -13,11 +13,11 @@ futures = "0.3.29"
 itertools = "0.14.0"
 lazy_static = "1.4.0"
 maplit = "1.0.2"
-pact_models = { version = "1.2.7" }
-pact_matching = { version = "1.2.9" }
-pact_mock_server = { version = "1.2.11" }
-pact_verifier = { version = "1.2.5" }
-pact_consumer = { version = "1.2.3" }
+pact_models = { version = "~1.2.7" }
+pact_matching = { version = "~1.2.9" }
+pact_mock_server = { version = "~1.2.11" }
+pact_verifier = { version = "~1.2.5" }
+pact_consumer = { version = "~1.3.3" }
 pretty_assertions = "1.4.0"
 regex = "1.10.2"
 reqwest = { version = "0.12.3", default-features = false, features = ["rustls-tls-native-roots", "json"] }
