--- a/rust/pact_matching/Cargo.toml
+++ b/rust/pact_matching/Cargo.toml
@@ -42,7 +42,7 @@ md5 = "0.7.0"
 mime = "0.3.17"
 multer = { version = "3.0.0", features = ["all"], optional = true }
 nom = "7.1.3"
-onig = { version = "6.4.0", default-features = false }
+onig = "6.5.1"
 pact_models = { version = "~1.3.1", default-features = false }
 pact-plugin-driver = { version = "~0.7.4", optional = true, default-features = false }
 rand = "0.9.0"
