--- a/rust/pact_ffi/Cargo.toml
+++ b/rust/pact_ffi/Cargo.toml
@@ -29,10 +29,10 @@ libc = "0.2.158"
 log = "0.4.22"
 maplit = "1.0.2"
 multipart-2021 = { version = "0.19.0", default-features = false, features = ["client", "mock"] }
-onig = "6.5.1"
+onig = { version = "6.5.1", default-features = false }
 # FFI Inmemory sink uses the global static `LOG_BUFFER` in the pact_matching crate. This is required to be the same
 # version as the mock server crate
-pact_matching = { version = "~1.2.11" }
+pact_matching = { version = "=1.2.10" }
 pact_mock_server = { version = "~1.2.14" }
 pact_models = { version = "~1.3.2" }
 pact-plugin-driver = { version = "~0.7.4" }
