--- a/rust/pact_models/Cargo.toml
+++ b/rust/pact_models/Cargo.toml
@@ -51,9 +51,9 @@ tracing = "0.1.41" # This needs to be the same version across all the libs (i.e.
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
 fs2 = "0.4.3"
-onig = "6.5.1"
-reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls-native-roots", "blocking", "json"] }
-uuid = { version = "1.3.3", features = ["v4"] }
+onig = { version = "6.5.1", default-features = false }
+reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls-native-roots", "blocking", "json"] }
+uuid = { version = "1.14.0", features = ["v4"] }
 
 [target.'cfg(target_family = "wasm")'.dependencies]
 uuid = { version = "1.3.3", features = ["v4"] }
