--- a/rust/pact_verifier_cli/Cargo.toml
+++ b/rust/pact_verifier_cli/Cargo.toml
@@ -42,8 +42,10 @@ tracing = "0.1.41"
 tracing-core = "0.1.34"
 tracing-log = "0.2.0"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter", "tracing-log"] }
+tempfile = "3.20.0"
 
 [dev-dependencies]
 expectest = "0.12.0"
 rstest = "0.24.0"
+tempfile = "3.20.0"
 trycmd = "0.15.9"
