chore(v2-matching-engine): Make V2 build pending

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,6 +40,7 @@ jobs:
 
   v2-engine:
     runs-on: ubuntu-latest
+    continue-on-error: true
     env:
       pact_do_not_track: true
     steps:
