--- a/compatibility-suite/Cargo.toml
+++ b/compatibility-suite/Cargo.toml
@@ -14,7 +14,7 @@ itertools = "0.14.0"
 lazy_static = "1.4.0"
 maplit = "1.0.2"
 pact_models = { version = "~1.3.6" }
-pact_matching = { version = "~2.0.0-beta.3" }
+pact_matching = { version = "~2.0.0" }
 pact_mock_server = { version = "~2.1.2" }
 pact_verifier = { version = "~1.3.2" }
 pact_consumer = { version = "~1.4.1" }
