--- a/compatibility-suite/Cargo.toml
+++ b/compatibility-suite/Cargo.toml
@@ -14,8 +14,8 @@ itertools = "0.14.0"
 lazy_static = "1.4.0"
 maplit = "1.0.2"
 pact_models = { version = "~1.3.6" }
-pact_matching = { version = "~2.0.1" }
-pact_mock_server = { version = "~2.1.3" }
+pact_matching = { version = "2.0.0-beta.3" }
+pact_mock_server = { version = "=2.1.2" }
 pact_verifier = { version = "~1.3.2" }
 pact_consumer = { version = "~1.4.1" }
 pretty_assertions = "1.4.0"
@@ -29,6 +29,9 @@ tokio = { version = "1.33.0", features = ["full"] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter", "tracing-log", "fmt"] }
 uuid = { version = "1.5.0", features = ["v4"] }
+
+[patch.crates-io]
+pact_matching = { version = "2.0.0-beta.3", git = "http://github.com/pact-foundation/pact-reference", tag = "libpact_matching-v2.0.0-beta.3" }
 
 [[test]]
 name = "v1_consumer"
