--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -80,3 +80,5 @@ jobs:
           targets: wasm32-wasip2
       - run: cargo build --target wasm32-wasip2
         working-directory: rust/pact_models
+      - run: cargo build --target wasm32-wasip2
+        working-directory: rust/pact_matching
