--- a/rust/pact_matching/Cargo.toml
+++ b/rust/pact_matching/Cargo.toml
@@ -42,21 +42,27 @@ md5 = "0.8.0"
 mime = "0.3.17"
 multer = { version = "3.1.0", features = ["all"], optional = true }
 nom = "7.1.3"
-onig = { version = "6.5.1", default-features = false }
 pact_models = { version = "~1.3.7", default-features = false }
-pact-plugin-driver = { version = "~0.7.4", optional = true, default-features = false }
 rand = "0.9.2"
-reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls-native-roots", "json"] }
+regex = "1.11.2"
 semver = "1.0.27"
 serde = { version = "^1.0", features = ["derive"] }
 serde_json = "^1.0"
 serde_urlencoded = "0.7.1"
 sxd-document = { version = "0.3.2", optional = true }
-tokio = { version = "1.47.1", features = ["full"] }
 tracing = "0.1.41"
 tracing-core = "0.1.34"
 tree_magic_mini = "3.2.0"
 uuid = { version = "1.18.1", features = ["v4"] }
+
+[target.'cfg(not(target_family = "wasm"))'.dependencies]
+onig = { version = "6.5.1", default-features = false }
+pact-plugin-driver = { version = "~0.7.5", optional = true, default-features = false }
+reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls-native-roots", "json"] }
+tokio = { version = "1.47.1", features = ["full"] }
+
+[target.'cfg(target_family = "wasm")'.dependencies]
+tokio = { version = "1.47.1", features = ["rt"] }
 
 [dev-dependencies]
 quickcheck = "1"
