feat(verifier-cli)!: rename binary to pact-verifier

--- a/rust/pact_verifier_cli/Cargo.toml
+++ b/rust/pact_verifier_cli/Cargo.toml
@@ -52,7 +52,7 @@ trycmd = "0.15.9"
 
 
 [[bin]]
-name = "pact_verifier_cli"
+name = "pact-verifier"
 path = "src/bin.rs"
 [lib]
 name = "pact_verifier_cli"
