--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,9 +30,9 @@ jobs:
             targets: x86_64-pc-windows-msvc
           - operating-system: windows-2022
             targets: aarch64-pc-windows-msvc
-          - operating-system: macos-13
+          - operating-system: macos-15-intel
             targets: x86_64-apple-darwin
-          - operating-system: macos-14
+          - operating-system: macos-15
             targets: aarch64-apple-darwin
       fail-fast: false
 
