--- a/.github/workflows/compatability-suite.yml
+++ b/.github/workflows/compatability-suite.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        operating-system: [ ubuntu-latest, windows-latest, macos-13, macos-14 ]
+        operating-system: [ ubuntu-latest, windows-latest, macos-15, macos-15-intel ]
     steps:
     - uses: actions/checkout@v2
     - uses: dtolnay/rust-toolchain@stable
@@ -29,7 +29,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        operating-system: [ ubuntu-latest, windows-latest, macos-13, macos-14 ]
+        operating-system: [ ubuntu-latest, windows-latest, macos-15, macos-15-intel ]
     steps:
       - uses: actions/checkout@v2
       - uses: dtolnay/rust-toolchain@stable
@@ -41,7 +41,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        operating-system: [ ubuntu-latest, windows-latest, macos-13, macos-14 ]
+        operating-system: [ ubuntu-latest, windows-latest, macos-15, macos-15-intel ]
     steps:
       - uses: actions/checkout@v2
       - uses: dtolnay/rust-toolchain@stable
@@ -53,7 +53,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        operating-system: [ ubuntu-latest, windows-latest, macos-13, macos-14 ]
+        operating-system: [ ubuntu-latest, windows-latest, macos-15, macos-15-intel ]
     steps:
       - uses: actions/checkout@v2
       - uses: dtolnay/rust-toolchain@stable
