chore: overhaul provider example
This is a complete redesign of the provider example, intended to build
on top of the consumer example. It (hopefully) provides a reference as
to how the FFI is to be used, on both consumer and provider sides.

Signed-off-by: JP-Ellis <josh@jpellis.me>

--- a/c/justfile
+++ b/c/justfile
@@ -1,8 +1,11 @@
 build:
 	just consumer/build
+	just provider/build
 
 clean:
 	just consumer/clean
+	just provider/clean
 
 run: build
 	just consumer/run
+	just provider/run
