feat(ffi): upgrade mock server to v2
The v2 mock server has a number of improvements over v1. This should be
generally backwards compatible.

Signed-off-by: JP-Ellis <josh@jpellis.me>

--- a/c/consumer/CMakeLists.txt
+++ b/c/consumer/CMakeLists.txt
@@ -104,6 +104,7 @@ if(APPLE)
     target_link_libraries(
         pact-consumer
         PRIVATE
+        "$<LINK_LIBRARY:FRAMEWORK,SystemConfiguration>"
         "$<LINK_LIBRARY:FRAMEWORK,Security>"
         "$<LINK_LIBRARY:FRAMEWORK,CoreFoundation>"
         "$<LINK_LIBRARY:FRAMEWORK,IOKit>"
