--- a/rust/pact_ffi/Cargo.toml
+++ b/rust/pact_ffi/Cargo.toml
@@ -33,7 +33,7 @@ onig = { version = "6.5.1", default-features = false }
 # FFI Inmemory sink uses the global static `LOG_BUFFER` in the pact_matching crate. This is required to be the same
 # version as the mock server crate
 pact_matching = { version = "1.2.12" }
-pact_mock_server = { version = "~1.2.16" }
+pact_mock_server = "~2.1.0"
 pact_models = { version = "~1.3.7" }
 pact-plugin-driver = { version = "~0.7.4" }
 pact_verifier = { version = "~1.3.2", path = "../pact_verifier" }
