--- a/rust/pact_ffi/Cargo.toml
+++ b/rust/pact_ffi/Cargo.toml
@@ -30,8 +30,8 @@ multipart-2021 = { version = "0.19.0", default-features = false, features = ["cl
 onig = { version = "6.5.1", default-features = false }
 # FFI Inmemory sink uses the global static `LOG_BUFFER` in the pact_matching crate. This is required to be the same
 # version as the mock server crate
-pact_matching = { version = "1.2.12" }
-pact_mock_server = "~2.1.0"
+pact_matching = { version = "~2.0.2", path = "../pact_matching" }
+pact_mock_server = "~2.2.0"
 pact_models = { version = "~1.3.7" }
 pact-plugin-driver = { version = "~0.7.5" }
 pact_verifier = { version = "~1.3.2", path = "../pact_verifier" }
